# opensks

./: .gitignore  .gitleaks.toml  Cargo.toml  README.md  deny.toml  package-lock.json  package.json
.github/workflows/: ci-core.yml  ci-integration.yml  ci-macos-app.yml  ci-performance.yml  ci-security.yml  codeql.yml
.opensks/: data-plane-manifest.json  project.json
.opensks/design-systems/opensks-studio-dark/: DESIGN.md  (+3 more)
assets/: prd-requirements.tsv
crates/opensks-adapter/: Cargo.toml
crates/opensks-adapter/src/: agentic.rs  lib.rs  openrouter.rs  patch_write.rs
crates/opensks-artifacts/: Cargo.toml
crates/opensks-cli/: Cargo.toml
crates/opensks-cli/src/: capability.rs  capability_tests.rs  conversation_args.rs  conversation_supervisor_tests.rs  conversation_timeline.rs  conversation_turn_tests.rs  file_command.rs  graph_command.rs  lib.rs  provider_dispatch_tests.rs  provider_registry.rs  retention.rs  security_tests.rs  terminal_command.rs  vault_tests.rs  worker_runtime.rs
crates/opensks-cli/tests/: pr099_receipt_e2e.rs
crates/opensks-codegraph/: Cargo.toml
crates/opensks-context/: Cargo.toml
crates/opensks-context/src/: lib.rs
crates/opensks-contracts/: Cargo.toml
crates/opensks-conversation/: Cargo.toml
crates/opensks-conversation/src/: lib.rs
crates/opensks-daemon/: Cargo.toml
crates/opensks-daemon/src/: lib.rs  terminal.rs
crates/opensks-design/: Cargo.toml
crates/opensks-design/src/: activation.rs  audit.rs  compiler.rs  contracts.rs  draft.rs  import.rs  lib.rs  registry.rs  revision.rs
crates/opensks-engine/: Cargo.toml
crates/opensks-engine/src/: lib.rs  projection.rs
crates/opensks-event-store/: Cargo.toml
crates/opensks-event-store/src/: lib.rs
crates/opensks-file-service/: Cargo.toml
crates/opensks-git/: Cargo.toml
crates/opensks-git-service/: Cargo.toml
crates/opensks-git-service/src/: lib.rs  mutation.rs
crates/opensks-graph/: Cargo.toml
crates/opensks-hooks/: Cargo.toml
crates/opensks-image/: Cargo.toml
crates/opensks-image/src/: lib.rs
crates/opensks-intel/: Cargo.toml
crates/opensks-intel/src/: lib.rs
crates/opensks-native-collaboration/: Cargo.toml
crates/opensks-patch-engine/: Cargo.toml
crates/opensks-patch-engine/src/: lib.rs
crates/opensks-perf/: Cargo.toml
crates/opensks-perf/src/: batcher.rs  cache.rs  lib.rs  stress.rs  supervisor.rs
crates/opensks-policy/: Cargo.toml
crates/opensks-proof/: Cargo.toml
crates/opensks-provider/: Cargo.toml
crates/opensks-provider/src/: lib.rs
crates/opensks-reasoning/: Cargo.toml
crates/opensks-retention/: Cargo.toml
crates/opensks-scheduler/: Cargo.toml
crates/opensks-scheduler/src/: lib.rs  mailbox.rs
crates/opensks-stream/: Cargo.toml
crates/opensks-terminal/: Cargo.toml  README.md
crates/opensks-terminal-suggest/: Cargo.toml  README.md
crates/opensks-terminal/src/: artifacts.rs  block.rs  lib.rs  pty.rs  redaction.rs  risk.rs  session.rs
crates/opensks-terminal/tests/: risk_policy.rs  session_smoke.rs
crates/opensks-testkit/: Cargo.toml
crates/opensks-triwiki/: Cargo.toml
crates/opensks-vault/: Cargo.toml
crates/opensks-vault/src/: lib.rs
docs/: architecture-ownership.md  migration.md  prd-coverage.md  public-api-surface.md  runtime-truth-matrix.generated.md  runtime-truth-matrix.md  terminal-contracts.md  terminal-ui.md
docs/architecture-exceptions/: 2026-06-22-clippy-cfg-gate.md  2026-06-22-conversation-dispatch.md  2026-06-22-design-import-dispatch.md  2026-06-22-design-studio-dispatch.md  2026-06-22-file-dispatch.md  2026-06-22-intel-dispatch.md  2026-06-22-perf-dispatch.md  2026-06-22-security-report-dispatch.md  2026-06-22-vault-dispatch.md  2026-06-23-capability-dispatch.md  2026-06-23-design-token-dispatch.md  2026-06-23-macos-test-gate.md  README.md
docs/baselines/: a4fd5a2-audit.md  ad186549-audit.md
docs/implementation/: 0e9dad0-provider-hyperparallel-ledger.md  chat-model-picker-native-qa-evidence.md  native-multisession-proof-install.md  native-multisession-proof-ui.md  native-multisession-proof.md
docs/release/: requirement-matrix.md
docs/release-readiness/: 07eda8a.md
docs/security/: dependency-advisories.md
schemas/: README.md  agent-adapter-descriptor.schema.json  agent-event-envelope.schema.json  codegraph-index.schema.json  codegraph-record.schema.json  compiled-plan.schema.json  completion-proof.schema.json  concurrency-decision.schema.json  context-pack.schema.json  conversation-digest.schema.json  conversation-message.schema.json  conversation-summary.schema.json  conversation-thread-settings.schema.json  conversation-turn-accepted.schema.json  conversation-turn-start-request.schema.json  data-plane-manifest.schema.json  design-context-pack.schema.json  design-context-pin.schema.json  design-package-components.schema.json  design-package-manifest.schema.json  design-package-tokens.schema.json  engine-event.schema.json  engine-request.schema.json  engine-stream-frame.schema.json  execution-event-envelope.schema.json  execution-event.schema.json  file-service-error.schema.json  git-branches.schema.json  git-commit-preview.schema.json  git-commit.schema.json  git-create-branch.schema.json  git-diff.schema.json  git-isolation.schema.json  git-log.schema.json  git-mutation-error.schema.json  git-stage.schema.json  git-status.schema.json  git-switch-preflight.schema.json  git-switch.schema.json  git-unstage.schema.json  (+88 more)
scripts/: architecture-budget.json  architecture-ownership.config  check-architecture-ownership.sh  commercial-readiness-check.sh  install-macos-local-smoke.sh
src/: lib.rs  main.rs  tests.rs
swift/: Package.swift
swift/Sources/: App.swift  Backend.swift  CommandPalette.swift  Components.swift  ComposerView.swift  EditorView.swift  ExecutionStore.swift  ExplorerView.swift  GraphEditorStore.swift  HomeView.swift  Models.swift  ProjectIntelligenceStore.swift  RailView.swift  RootView.swift  StatusBarView.swift  SyntaxHighlighter.swift  TerminalView.swift  Theme.swift  TitleBarView.swift
tests/: daemon_stdio_stream.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+180 files in other folders)
