[package]
name = "opensks-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opensks-adapter = { path = "../opensks-adapter" }
opensks-contracts = { path = "../opensks-contracts" }
opensks-conversation = { path = "../opensks-conversation" }
opensks-context = { path = "../opensks-context" }
opensks-engine = { path = "../opensks-engine" }
opensks-event-store = { path = "../opensks-event-store" }
opensks-git = { path = "../opensks-git" }
opensks-graph = { path = "../opensks-graph" }
opensks-image = { path = "../opensks-image" }
opensks-provider = { path = "../opensks-provider" }
opensks-scheduler = { path = "../opensks-scheduler" }
opensks-stream = { path = "../opensks-stream" }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
simulation = ["opensks-adapter/simulation"]

[dev-dependencies]
opensks-adapter = { path = "../opensks-adapter", features = ["simulation"] }

[lints]
workspace = true
