[package]
name = "opensks-design"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opensks-contracts = { path = "../opensks-contracts" }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "gen-swift-tokens"
path = "src/bin/gen_swift_tokens.rs"

[lints]
workspace = true
