[package]
name = "opensks-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opensks-artifacts = { path = "../opensks-artifacts" }
opensks-contracts = { path = "../opensks-contracts" }
opensks-event-store = { path = "../opensks-event-store" }
opensks-graph = { path = "../opensks-graph" }
opensks-scheduler = { path = "../opensks-scheduler" }
serde_json = { workspace = true }
thiserror = { workspace = true }
