[package]
name = "opensks-git-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opensks-contracts = { path = "../opensks-contracts" }
opensks-policy = { path = "../opensks-policy" }
thiserror = { workspace = true }

[lints]
workspace = true
