[package]
name = "opensks-intel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opensks-contracts = { path = "../opensks-contracts" }
opensks-codegraph = { path = "../opensks-codegraph" }
opensks-triwiki = { path = "../opensks-triwiki" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
