[package]
name = "opensks-patch-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opensks-contracts = { path = "../opensks-contracts" }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
