[package]
name = "opensks-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opensks-contracts = { path = "../opensks-contracts" }
opensks-policy = { path = "../opensks-policy" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
