[package]
name = "opensks-scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opensks-contracts = { path = "../opensks-contracts" }
opensks-event-store = { path = "../opensks-event-store" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
