[package]
name = "opensks-terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opensks-contracts = { path = "../opensks-contracts" }
portable-pty = "0.9"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
